<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

    <TableLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/createTime"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/createDate"/>

        </TableRow>

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/category"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="20dp"
                    android:text=""
                    android:id="@+id/category"/>

        </TableRow>

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/location"/>
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/location"/>

        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/victim"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="5dp"
                    android:id="@+id/victim"/>

        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="5dp"
                    android:id="@+id/contact"/>

        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ref"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="5dp"
                    android:id="@+id/refNumber"/>

        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="5dp"
                    android:id="@+id/status"/>

        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update_time"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="5dp"
                    android:id="@+id/updatedTime"/>

        </TableRow>

        <TableRow android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="20dp"
                  android:paddingTop="10dp">
            <LinearLayout android:orientation="horizontal"
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:layout_span="2">
                <Button android:id="@+id/btn_process"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Process" android:onClick="btn_process_click"/>

                <Button android:id="@+id/btn_back"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Back" android:onClick="btn_back_click"/>
            </LinearLayout>

        </TableRow>
    </TableLayout>

</ScrollView>
